# rules_js_load_bin_issue

./: .gitignore  README.md
consumer/: BUILD.bazel  MODULE.bazel  package.json
rules_browsers/: MODULE.bazel  index.bzl  package.json  pnpm-lock.yaml
